Fix truncation due to overflow hidden on series cards.

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -191,7 +191,6 @@ $alphaville-card__color--yellow-tint3: #b35400;
 		.alphaville-card--inline-list {
 			position: relative;
 			padding-right: 25px;
-			overflow: hidden;
 
 			&:after {
 				@include oIconsGetIcon('series', oColorsGetPaletteColor('grey-tint3'), 40, $iconset-version: 1);
